# icu-perf

./: .gitignore  readme.md
tests/collator/: Cargo.toml
tests/collator/benches/: collator.rs
tests/collator/data/: collator.json  structs.rs
tests/collator/examples/: minimal.rs
tests/collator/src/: icu4c.rs  main.rs
tests/collator/src/data/icu4x-1.0.rs/: any.rs
tests/collator/src/data/icu4x-1.0.rs/datetime/: mod.rs
tests/collator/src/data/icu4x-1.0.rs/datetime/buddhist/: mod.rs
tests/collator/src/data/icu4x-1.0.rs/datetime/ethiopic/: datelengths_v1.rs
tests/collator/src/data/icu4x-1.0.rs/fallback/supplement/: co_v1.rs
tests/collator/src/data/icu4x-1.0.rs/list/: unit_v1.rs
tests/collator/src/data/icu4x-1.0.rs/normalizer/: nfkdex_v1.rs
tests/collator/src/data/icu4x-1.0.rs/props/: alpha_v1.rs  bidi_c_v1.rs  cwu_v1.rs  ebase_v1.rs  emoji_v1.rs  gr_link_v1.rs  nfkdinert_v1.rs  pcm_v1.rs  sb_v1.rs
tests/collator/src/data/icu4x-1.0.rs/time_zone/: specific_short_v1.rs
tests/collator/src/icu4x/: mod.rs
tests/collator/tests/: data.rs
tests/components/datetime/: Cargo.toml
tests/components/datetime/benches/: datetime.rs
tests/components/datetime/data/: datetime.rs
tests/components/datetime/examples/: icu4c-perf.rs  icu4c.rs  icu4x-baked.rs  icu4x-static.rs
tests/components/datetime/src/: icu4c.rs  icu4x.rs  lib.rs  main.rs
tests/components/datetime/src/icu4x/: data  mod.rs
tests/components/datetime/tests/: data.rs
tests/components/locid/: Cargo.toml
tests/components/locid/benches/: langid.rs
tests/components/locid/src/: lib.rs  main.rs
tests/components/segmenter/: Cargo.toml
tests/components/segmenter/src/: icu4c.rs  main.rs
tests/components/segmenter/src/data/icu4x-1.0.rs/collator/: mod.rs
tests/components/segmenter/src/data/icu4x-1.0.rs/decimal/: mod.rs  symbols_v1.rs
tests/components/segmenter/src/data/icu4x-1.0.rs/locid_transform/: aliases_v1.rs
tests/components/segmenter/src/data/icu4x-1.0.rs/normalizer/: uts46d_v1.rs
tests/components/segmenter/src/data/icu4x-1.0.rs/props/: cwl_v1.rs  cwt_v1.rs  di_v1.rs  emod_v1.rs  epres_v1.rs  gr_ext_v1.rs  lb_v1.rs  loe_v1.rs  mod.rs  qmark_v1.rs  segstart_v1.rs  uideo_v1.rs  upper_v1.rs  vs_v1.rs  xdigit_v1.rs  xidc_v1.rs
tests/datetime/: Cargo.toml
tests/datetime/.cargo/: config
tests/datetime/benches/: datetime.rs
tests/datetime/cpp/: Makefile  datetime  datetime.cpp  libicui18n.72.dylib  libicuuc.72.dylib
tests/datetime/data/: datetime.cpp  datetime.json  datetime.rs  structs.rs
tests/datetime/examples/: icu4c-perf.rs  icu4c.rs  icu4x-baked.rs  icu4x-static.rs  minimal.rs
tests/datetime/src/: icu4c.rs  main.rs
tests/datetime/src/icu4x/: mod.rs
tests/datetime/tests/: data.rs
tests/locid/: Cargo.toml  build.rs
tests/locid/.cargo/: config
tests/locid/benches/: langid.rs
tests/locid/data/: locid.json  structs.rs
tests/locid/src/: icu4c.rs  main.rs
tests/locid/src/icu4x/: mod.rs
tests/locid/tests/: data.rs
tests/number/: Cargo.toml  datetime.json
tests/number/benches/: number.rs
tests/number/data/: number.json  structs.rs
tests/number/examples/: minimal.rs
tests/number/src/: icu4c.rs  main.rs
tests/number/src/icu4x/: mod.rs
tests/number/tests/: data.rs
tests/plurals/: Cargo.toml
tests/plurals/benches/: plurals.rs
tests/plurals/data/: plurals.json  structs.rs
tests/plurals/examples/: minimal.rs
tests/plurals/icu-perf/data/icu4x-1.0.rs/calendar/: mod.rs
tests/plurals/icu-perf/data/icu4x-1.0.rs/datetime/: mod.rs
tests/plurals/icu-perf/data/icu4x-1.0.rs/fallback/: likelysubtags_v1.rs
tests/plurals/icu-perf/data/icu4x-1.0.rs/normalizer/: comp_v1.rs  nfd_v1.rs
tests/plurals/icu-perf/data/icu4x-1.0.rs/plurals/: mod.rs
tests/plurals/icu-perf/data/icu4x-1.0.rs/props/: bc_v1.rs  cased_v1.rs  cwcm_v1.rs  gc_v1.rs  gcb_v1.rs  graph_v1.rs  idc_v1.rs  idst_v1.rs  math_v1.rs  nfcinert_v1.rs  pat_syn_v1.rs  wb_v1.rs
tests/plurals/icu-perf/data/icu4x-1.0.rs/segmenter/: grapheme_v1.rs  line_v1.rs  lstm_v1.rs  sentence_v1.rs
tests/plurals/icu-perf/data/icu4x-1.0.rs/time_zone/: generic_short_v1.rs
tests/plurals/src/: icu4c.rs  lib.rs  main.rs
tests/plurals/src/icu4x/: mod.rs
tests/plurals/tests/: data.rs
tests/segmenter/: Cargo.toml
tests/segmenter/.cargo/: config
tests/segmenter/benches/: segmenter.rs
tests/segmenter/cpp/: Makefile  libicudata.72.dylib  libicui18n.72.dylib  libicuuc.72.dylib  segmenter  segmenter.cpp
tests/segmenter/data/: scraper.py  segmenter.json  structs.rs
tests/segmenter/data/wiki/chatgpt/: ar-icu4c-line.txt  ar-icu4c-word.txt  ar-icu4x-line-utf8.txt  ar-icu4x-line.txt  ar-icu4x-word-utf8.txt  ar-icu4x-word.txt  ar.txt  en-icu4c-line.txt  en-icu4c-word.txt  en-icu4x-line-utf8.txt  en-icu4x-line.txt  en-icu4x-word-utf8.txt  en-icu4x-word.txt  en.txt  my-icu4c-line.txt  my-icu4c-word.txt  my-icu4x-line-utf8.txt  my-icu4x-line.txt  my-icu4x-word-utf8.txt  my-icu4x-word.txt  my.txt  ru-icu4c-line.txt  ru-icu4c-word.txt  ru-icu4x-line-utf8.txt  ru-icu4x-line.txt  ru-icu4x-word-utf8.txt  ru-icu4x-word.txt  ru.txt  th-icu4c-line.txt  th-icu4c-word.txt  th-icu4x-line-utf8.txt  th-icu4x-line.txt  th-icu4x-word-utf8.txt  th-icu4x-word.txt  th.txt  zh-icu4c-line.txt  zh-icu4c-word.txt  zh-icu4x-line-utf8.txt  zh-icu4x-line.txt  zh-icu4x-word-utf8.txt  (+2 more)
tests/segmenter/examples/: minimal.rs
tests/segmenter/src/: icu4c.rs  main.rs
tests/segmenter/src/data/icu4x-1.0.rs/: mod.rs
tests/segmenter/src/data/icu4x-1.0.rs/calendar/: japanese_v1.rs  japanext_v1.rs
tests/segmenter/src/data/icu4x-1.0.rs/datetime/: timesymbols_v1.rs  week_data_v1.rs
tests/segmenter/src/data/icu4x-1.0.rs/fallback/: parents_v1.rs
tests/segmenter/src/data/icu4x-1.0.rs/list/: mod.rs
tests/segmenter/src/data/icu4x-1.0.rs/normalizer/: mod.rs  nfkd_v1.rs
tests/segmenter/src/data/icu4x-1.0.rs/props/: ahex_v1.rs  comp_ex_v1.rs  dash_v1.rs  dep_v1.rs  dia_v1.rs  idsb_v1.rs  join_c_v1.rs  nchar_v1.rs  nfdinert_v1.rs  print_v1.rs  sd_v1.rs  term_v1.rs
tests/segmenter/src/icu4x/: data  mod.rs
tests/segmenter/tests/: data.rs
(+4701 files in other folders)
