[package]
name = "icu-perf-test-datetime"
version = "0.1.0"
edition = "2021"
links = "icui18n"

[dependencies]
icu_datetime = { path = "../../../icu4x/components/datetime", features = ["serde"], optional = true }
icu_locale = { path = "../../../icu4x/components/locale", optional = true }
icu_calendar = { path = "../../../icu4x/components/calendar", optional = true }
icu_provider_blob = { path = "../../../icu4x/provider/blob", optional = true }
icu_provider = { path = "../../../icu4x/provider/core", optional = true }
icu_provider_adapters = { path = "../../../icu4x/provider/adapters", optional = true }
icu = { path = "../../../icu4x/components/icu", optional = true }
libc = { version = "0.2", optional = true }
zerovec = { path = "../../../icu4x/utils/zerovec", optional = true }
litemap = { path = "../../../icu4x/utils/litemap", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
writeable = { path = "../../../icu4x/utils/writeable", optional = true }

[profile.release]
panic = "abort"
lto = true
opt-level = "s"

[dev-dependencies]
criterion = "0.3"
icu_locale = { path = "../../../icu4x/components/locale" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[features]
icu4x = ["icu_datetime", "icu_calendar", "icu_locale", "writeable"]
icu4x-static = ["icu4x", "icu_provider_blob"]
icu4x-baked = ["icu4x", "icu_provider_adapters", "litemap", "zerovec", "icu", "icu_provider"]
icu4c = ["libc"]
gen = ["serde", "serde_json"]

[[bench]]
name = "datetime"
harness = false

[[example]]
name = "icu4c"
required-features = ["icu4c"]

[[example]]
name = "icu4x-static"
required-features = ["icu4x-static"]

[[example]]
name = "minimal"
required-features = ["icu4x-static"]

[[example]]
name = "icu4x-baked"
required-features = ["icu4x-baked"]

[[bin]]
name = "generate-rs"
required-features = ["gen"]

[[bin]]
name = "generate-cpp"
required-features = ["gen"]
