[package]
name = "icu-perf-test-number"
version = "0.1.0"
edition = "2021"
links = "icui18n"

[dependencies]
icu_decimal = { path = "../../../icu4x/components/decimal", features = ["serde"], optional = true }
fixed_decimal = { path = "../../../icu4x/utils/fixed_decimal", features = ["ryu"], optional = true }
icu_locid = { path = "../../../icu4x/components/locid", optional = true }
icu_provider_blob = { path = "../../../icu4x/provider/blob", optional = true }
icu_provider = { path = "../../../icu4x/provider/core", optional = true }
icu_provider_adapters = { path = "../../../icu4x/provider/adapters", optional = true }
icu = { path = "../../../icu4x/components/icu", optional = true, features = ["experimental"] }
zerovec = { path = "../../../icu4x/utils/zerovec", optional = true }
litemap = { path = "../../../icu4x/utils/litemap", optional = true }
writeable = { path = "../../../icu4x/utils/writeable", optional = true }
libc = { version = "0.2", optional = true }

[dev-dependencies]
criterion = "0.3"
icu_locid = { path = "../../../icu4x/components/locid" }
serde = "1"
serde_json = "1"

[features]
icu4x = ["icu_decimal", "fixed_decimal", "icu_locid", "writeable"]
icu4x-static = ["icu4x", "icu_provider_blob"]
icu4x-baked = ["icu4x", "icu_provider_adapters", "litemap", "zerovec", "icu", "icu_provider"]
icu4c = ["libc"]

[[bench]]
name = "number"
harness = false
