[package]
name = "icu-perf-test-locid"
version = "0.1.0"
edition = "2021"
links = "icuuc"

[dependencies]
intl-harness = { path = "../../../harness" }
icu_locid = { path = "../../../../icu4x/components/locid" }
libc = "0.2"

[dev-dependencies]

criterion = "0.3"

[[bench]]
name = "langid"
harness = false
